# SimplePhysicsEngine

cmake/: 3rd.cmake
src/: CMakeLists.txt  dtkPhysMassSpring.cpp  dtkStaticTriangleMesh.cpp
src/include/: dtk.h  dtkPhysMassSpring.h  dtkPhysSpring.h  dtkStaticTriangleMesh.h
src/math/include/: dtkMatrix.h  dtkSparseMatrix.h  dtkVector.h  dtkVectorOP.h
test/: CMakeLists.txt
test/system_test/: CMakeLists.txt
test/system_test/MassSpring3D/: CMakeLists.txt  ClothSimulation.cpp  Shader.cpp  dtkPhysMassSpringSolver.cpp  main.cpp
test/system_test/MassSpring3D/include/: ClothSimulation.h  Scene.h  dtkPhysMassSpringSolver.h
